test/Serialization/AllowErrors/invalid-top.code
// RUN: %empty-directory(%t)
// RUN: %empty-directory(%t/mods)

// RUN: touch %t/empty.code
// RUN: %{python} %utils/split_file.py -o %t %s

// Errors often only occur during merging, hence creating an empty module here
// RUN: %target-language-frontend -verify -module-name errors -emit-module -o %t/mods/errorsmain.partial.codemodule -experimental-allow-module-with-compiler-errors %t/errors.code
// RUN: %target-language-frontend -module-name errors -emit-module -o %t/mods/errorsempty.partial.codemodule %t/empty.code
// RUN: %target-language-frontend -module-name errors -emit-module -o %t/mods/errors.codemodule -experimental-allow-module-with-compiler-errors %t/mods/errorsmain.partial.codemodule %t/mods/errorsempty.partial.codemodule

// RUN: %target-language-frontend -emit-module -o %t/mods/validUses.codemodule -experimental-allow-module-with-compiler-errors -I%t/mods %t/valid-uses.code 2>&1 | %FileCheck -check-prefix=CHECK-VALID %s

// RUN: %target-language-frontend -emit-module -o %t/mods/invalidUses.codemodule -experimental-allow-module-with-compiler-errors -I%t/mods %t/invalid-uses.code 2>&1 | %FileCheck -check-prefix=CHECK-INVALID %s

// BEGIN errors.code
public struct ValidType {}

public fn validFunc() -> ValidType { return ValidType() }

public fn invalidFuncBody() -> ValidType {
  ret // expected-error {{cannot find 'ret'}}
}

public fn invalidFuncRet() -> undefined {} // expected-error {{cannot find type 'undefined'}}


// BEGIN valid-uses.code
import errors

fn test(s: ValidType) {
  print(validFunc())
  print(invalidFuncBody())
}

// Check SIL diagnostics are still output (no reason not to output SIL since
// there were no errors)
fn other() -> Int {}
// CHECK-VALID: valid-uses.code:10:22: error: missing return
fn other2() -> Bool {}
// CHECK-VALID: valid-uses.code:12:24: error: missing return


// BEGIN invalid-uses.code
import errors

fn test() {
  invalidFuncRet()
}

// All invalid uses should have no errors in the file itself - all referenced
// invalid declarations should have an error elsewhere (but we don't care what
// that location is)
// CHECK-INVALID-NOT: invalid-uses.code:{{.*}} error:
// CHECK-INVALID: error: allowing deserialization of error type '<null>' in module 'errors'
// CHECK-INVALID: error: allowing deserialization of invalid declaration 'invalidFuncRet()' (global function) in module 'errors'
// CHECK-INVALID-NOT: invalid-uses.code:{{.*}} error:
